src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_card_running_with_subagents_and_shells.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ BACKLOG 0 [ ]                ◦ RUNNING 1                   ◦ REVIEW 0                      ◦ DONE 0
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
                              │  ── active                │                              │
                              │ ╭───────────────────────╮ │                              │
                              │ │  ▎ #1 running with bo…│ │                              │
                              │ │   ◉ running · 1 agent · │                              │
                              │ ╰───────────────────────╯ │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
[a] select all  [n]ew  [E]pic  [D] quick  [s]plit  [F]lat  [f]ilter  [/] search  [P] todo  [t] add  [?] help
