src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_help_overlay.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ backlog 2 [ ]                 ◦ running 1                   ◦ review 0                     ◦ done 1
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│  ── active                │                              │──────────────────────────────
  ▌ #1 Task 1           ╔ Help ════════════════════════════════════════════════════════════════╗ Task 4
   ◦ <1h                ║                                                                      ║1h
────────────────────────║  Navigation                                                          ║────────────────────────
  ▎ #2 Task 2           ║  [h/←] prev column     [j/↓] next task                               ║
   ◦ <1h                ║  [l/→] next column     [k/↑] prev task                               ║
────────────────────────║  [Enter] task detail      [e] edit / enter epic                      ║
                        ║  [q] exit epic   [Esc] clear sel   [gg/[ / G/]] jump top/bottom      ║
                        ║                                                                      ║
                        ║  Actions                                                             ║
                        ║  [n] new task   [E] new epic   [N] notifications                     ║
                        ║  [m] reparent epic / move task to epic (tree picker)                 ║
                        ║  [d] dispatch*  [H/L] move task/epic backward/forward                ║
                        ║  [x] done/arch  [D] quick dsp  [Space] session/board (gg: top)       ║
                        ║  [l/→] Archive   [a] select all   [/] search titles/ids              ║
                        ║  [v] select  [f] filter repos  [A] filter active                     ║
                        ║  [T] detach tmux panel  (any task with a tmux window, supports batch)║
                        ║  [s] toggle split  [S] swap task into pane                           ║
                        ║  [p] open PR  [:] main session (jump/pick dir)  [o] sync repo        ║
                        ║  [J/K] reorder item up/down  [C] feed config  [P] todo (a add · space║
                        ║                                                                      ║
                        ║  * [d] is context-dependent:                                         ║
                        ║    Backlog (no plan) → brainstorm                                    ║
                        ║    Backlog (has plan) → dispatch                                     ║
                        ║    Running → resume (if window gone)                                 ║
                        ║    Epic → dispatch next backlog subtask                              ║
                        ║                                                                      ║
                        ║  General                                                             ║
────────────────────────║  [?] this help  [N] notify on/off  [q] quit (or exit epic)           ║────────────────────────
                        ║  Prefix+Space back to board  Prefix+e toggle tree  (tmux)            ║
                        ║                                                                      ║
                        ║  [?] or [Esc] to close                                               ║
                        ╚══════════════════════════════════════════════════════════════════════╝



[?] or [Esc] to close help
